<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_meeting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Maréu.NoActionBar"
    tools:context=".ui.meetings_list.NewMeetingActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/schedule_meeting_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/lz_mareu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/lamzone_mareu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="18dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:shadowColor="@color/lamzoneDarker"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="2"
                android:text="PLANIFIER UNE REUNION"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/lamzoneDark"
                app:layout_constraintBottom_toBottomOf="@+id/lz_mareu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lz_mareu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_date_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="18dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_calendar_24"
                    android:focusable="false"
                    android:hint="Date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_time_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="18dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_date_lyt"
                app:layout_constraintWidth_percent="0.447">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_time_24"
                    android:focusable="false"
                    android:hint="Heure" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_duration_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="18dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/meeting_time_lyt"
                app:layout_constraintWidth_percent="0.447">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_hourglass_top_24"
                    android:focusable="false"
                    android:hint="Durée"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/meeting_duration_spinner"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/meeting_duration_lyt"
                app:layout_constraintEnd_toEndOf="@id/meeting_duration_lyt"
                app:layout_constraintStart_toStartOf="@id/meeting_duration_lyt"
                app:layout_constraintTop_toTopOf="@id/meeting_duration_lyt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_room_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="18dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_time_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_room"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_location_searching_24"
                    android:focusable="false"
                    android:hint="Salle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_subject_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="18dp"
                android:minHeight="60dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_room_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_subject_24"
                    android:hint="Sujet"
                    android:inputType="textEmailSubject"
                    android:maxLength="55" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_participants_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="18dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_subject_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_person_add_24"
                    android:focusable="true"
                    android:hint="Ajout de participants"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:clickable="true"
                android:focusable="true"
                app:flow_horizontalAlign="start"
                app:layout_constraintEnd_toEndOf="@id/meeting_participants_lyt"
                app:layout_constraintStart_toStartOf="@id/meeting_participants_lyt"
                app:layout_constraintTop_toBottomOf="@id/meeting_participants_lyt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/schedule_meeting_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="10dp"
        android:enabled="false"
        android:text="Planifier"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>