<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.meetings_list.MeetingsListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meeting_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lamzoneDarker"
        android:scrollbars="vertical"
        tools:listitem="@layout/meeting_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_add_lzdarker_24"
        app:tint="@null" />

</RelativeLayout>