<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="374dp"
    android:layout_height="wrap_content">

    <GridView
        android:id="@+id/meeting_rooms_grid"
        android:background="@color/teal_700"
        android:columnWidth="120dp"
        android:numColumns="3"
        android:verticalSpacing="3dp"
        android:horizontalSpacing="3dp"
        android:padding="4dp"
        android:stretchMode="none" />

</GridLayout>